* added 3D, 4D and 5D rectangle ROI (available through code only) * ROI:  - fixed minor issue on subtraction operation.  - fixed NOT boolean operation for 3D, 4D and 5D ROI. * Canvas2D and VtkCanvas:  - reset view with 'r' shortcut  - reset view and palette with 'R' shortcut * Loader:  - better image auto ordering from filename when loading a group of file  - better progress information when loading a group of file * fixed minor refresh issue on histogram * Sequence:  - added getDefautColormap(..) and setDefautColormap(..) methods.  - added getColormap(..) and setColormap(..) methods (user LUT) * Colormap are now correctly preserved on channel extraction or remove. * minor fix on the UndoManager. * others minors changes.